GH-45: Split LexicalData interface into separate word and label filters (code part).